platform/base/robotics-playground/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: robotics-playground
  namespace: redhat-ods-applications
  labels:
    app: robotics-playground
spec:
  replicas: 1
  selector:
    matchLabels:
      app: robotics-playground
  template:
    metadata:
      labels:
        app: robotics-playground
    spec:
      containers:
        - name: api
          image: quay.io/redhat-et/robotics-playground:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 512Mi
