platform/base/robotics-playground/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: robotics-playground-ui
  namespace: redhat-ods-applications
  labels:
    app: robotics-playground-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: robotics-playground-ui
  template:
    metadata:
      labels:
        app: robotics-playground-ui
    spec:
      containers:
        - name: nginx
          image: quay.io/redhat-et/robotics-playground-ui:latest
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
          ports:
            - name: http-mf
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /remoteEntry.js
              port: http-mf
            initialDelaySeconds: 2
            periodSeconds: 10
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 64Mi
      volumes:
        - name: nginx-config
          configMap:
            name: robotics-playground-nginx
