platform/base/robotics-playground/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: robotics-playground
  namespace: redhat-ods-applications
  labels:
    app: robotics-playground
spec:
  selector:
    app: robotics-playground
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
