platform/base/robotics-playground/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: robotics-playground-ui
  namespace: redhat-ods-applications
  labels:
    app: robotics-playground-ui
spec:
  selector:
    app: robotics-playground-ui
  ports:
    - name: http-mf
      port: 8080
      targetPort: http-mf
      protocol: TCP
