platform/base/robotics-playground/route-rerun.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: robotics-playground-rerun-web
  namespace: redhat-ods-applications
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: robotics-playground-ui
  port:
    targetPort: http-mf
  path: /rerun
